welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:11: error: not found: value Direction
    if(getDirection()==Direction.OUEST){
                       ^ZigZag:15: error: not found: value Direction
    } else if(getDirection()==Direction.EST){
                              ^